--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -66,7 +66,7 @@ body > * {
 }
 
 .header {
-  position: absolute;
+  position: fixed;
   width: 100%;
   left: 0;
   right: 0;
@@ -217,6 +217,13 @@ body > * {
 
     @media (min-aspect-ratio: 1/1) {
       align-self: center;
+    }
+  }
+
+  @media (min-aspect-ratio: 1/1) {
+    .product:only-child {
+      margin-top: auto;
+      margin-bottom: auto;
     }
   }
 }
